pc-0011 prevent footer from collapsing

--- a/assign6/tutorial/pc_home.css
+++ b/assign6/tutorial/pc_home.css
@@ -78,4 +78,9 @@ section#rightColumn > nav.horizontalNavigation li {
 
 
 /* Footer Styles */
+footer::after {
+   clear: both;
+   content: "";
+   display: table;
+}
 
